--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,51 @@
-# gitignore template for Drupal 8 projects
-#
-# earlier versions of Drupal are tracked in `community/PHP/`
-#
-# follows official upstream conventions:
-# https://www.drupal.org/docs/develop/using-composer
+# .gitignore for Drupal 8/9/10/11 Composer-based projects
+# Based on Drupal.org best practices: https://www.drupal.org/docs/develop/using-composer
 
-# Ignore configuration files that may contain sensitive information
+# -----------------------------------------------------------------------------
+# Sensitive configuration files
+# -----------------------------------------------------------------------------
 /web/sites/*/*settings*.php
 /web/sites/*/*services*.yml
+.env
+.env.*
 
-# Ignore paths that may contain user-generated content
+# -----------------------------------------------------------------------------
+# User-generated content (files)
 /web/sites/*/files
 /web/sites/*/public
 /web/sites/*/private
 /web/sites/*/files-public
 /web/sites/*/files-private
 
-# Ignore paths that may contain temporary files
+# -----------------------------------------------------------------------------
+# Temporary and generated files
 /web/sites/*/translations
 /web/sites/*/tmp
 /web/sites/*/cache
 
-# Ignore drupal core (if not versioning drupal sources)
-/web/vendor
+# -----------------------------------------------------------------------------
+# Drupal core and contrib (if not versioning sources)
 /web/core
-/web/modules/README.txt
 /web/modules/contrib
-/web/profiles/README.txt
-/web/profiles/contrib
-/web/sites/development.services.yml
-/web/sites/example.settings.local.php
-/web/sites/example.sites.php
-/web/sites/README.txt
-/web/themes/README.txt
 /web/themes/contrib
+/web/profiles/contrib
+/web/vendor
+
+# -----------------------------------------------------------------------------
+# Default/Example/Auto-generated files you typically don't version
+/web/modules/README.txt
+/web/profiles/README.txt
+/web/sites/README.txt
+/web/sites/example.*
+/web/sites/development.services.yml
+/web/themes/README.txt
+/web/example.gitignore
+/web/INSTALL.txt
+/web/LICENSE.txt
+/web/README.txt
+/web/robots.txt
+/web/update.php
+/web/web.config
 /web/.csslintrc
 /web/.editorconfig
 /web/.eslintignore
@@ -42,24 +54,25 @@
 /web/.htaccess
 /web/.ht.router.php
 /web/autoload.php
-/web/composer.json
-/web/composer.lock
-/web/example.gitignore
-/web/index.php
-/web/INSTALL.txt
-/web/LICENSE.txt
-/web/README.txt
-/web/robots.txt
-/web/update.php
-/web/web.config
 
-# Ignore vendor dependencies and scripts
+# -----------------------------------------------------------------------------
+# Global vendor binaries
 /vendor
 /composer.phar
-/composer
 /robo.phar
-/robo
 /drush.phar
-/drush
 /drupal.phar
+/composer
+/robo
+/drush
 /drupal
+
+# -----------------------------------------------------------------------------
+# Editor and OS artifacts
+.DS_Store
+Thumbs.db
+*.bak
+*.swp
+*.swo
+.idea/
+.vscode/
