--- a/web/config/sync/block.block.olivero_welcomeblock.yml
+++ b/web/config/sync/block.block.olivero_welcomeblock.yml
@@ -6,28 +6,20 @@ dependencies:
     - 'block_content:basic:c353c4bf-d853-4b12-b0c7-5bce21105563'
   module:
     - block_content
-    - user
   theme:
     - olivero
 id: olivero_welcomeblock
 theme: olivero
 region: sidebar
-weight: 0
+weight: -8
 provider: null
 plugin: 'block_content:c353c4bf-d853-4b12-b0c7-5bce21105563'
 settings:
   id: 'block_content:c353c4bf-d853-4b12-b0c7-5bce21105563'
-  label: 'Welcome Block'
+  label: Welcome
   label_display: visible
   provider: block_content
   status: true
   info: ''
   view_mode: full
-visibility:
-  user_role:
-    id: user_role
-    negate: false
-    context_mapping:
-      user: '@user.current_user_context:current_user'
-    roles:
-      anonymous: anonymous
+visibility: {  }
